Update footer fixed contrast error from WAVE

--- a/assets/style.css
+++ b/assets/style.css
@@ -163,7 +163,7 @@ footer {
 }
 
 footer a {
-    color: #e94560;
+    color: #ffffff;
     text-decoration: none;
 }
 
